# deep-learning

./: .gitignore  LICENSE  README.md  cnn-model-cifar10.ipynb  learning-schedulers.ipynb  pyproject.toml  transfer-learning-cifar10.ipynb  variational-autoencoders-fashionmnist.ipynb
