[project]
name = "deep-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastprogress>=1.0.3",
    "matplotlib>=3.10.8",
    "notebook>=7.5.1",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.24.1",
]
